envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 1020
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 1010
      filter_chains:
      - filters:
        - name: envoy.filters.network.http_connection_manager
          config:
            codec_type: auto
            stat_prefix: ingress_http
            access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/access.log"
            route_config:
              name: local_route
              virtual_hosts:
              - name: local_service
                domains: ["*"]
                routes:
                - match:
                    prefix: "/"
                  route:
                    cluster: events_srv_cluster
                    prefix_rewrite: "/"
                    max_grpc_timeout: 0s
                cors:
                  allow_origin_string_match:
                  - prefix: "*"
                  allow_methods: GET, PUT, DELETE, POST, OPTIONS
                  allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                  max_age: "1728000"
                  expose_headers: grpc-status,grpc-message
            http_filters:
            - name: envoy.filters.http.grpc_web
            - name: envoy.filters.http.cors
            - name: envoy.filters.http.router
  
  clusters:
  - name: events_srv_cluster
    connect_timeout: 20s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 192.168.64.1
        port_value: 9000
